# ExpTrack

./: README.md
ExpTrack/: app.json  package-lock.json  package.json
ExpTrack/app/: index.tsx  kill.tsx
ExpTrack/app/setting/: index.tsx
ExpTrack/app/setting/details/: [id].tsx
backend/: .env  .env.example  .gitignore  Cargo.toml  ExpTrack.postman_collection.json  Makefile  README.md  docker-compose.yml
backend/db/: init.sql
backend/migrations/: 20251018094443_init.up.sql  init.down.sql
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs  router.rs
backend/src/handlers/: mod.rs  queries.rs
backend/src/handlers/commands/: create.rs  delete.rs  mod.rs  update.rs
backend/src/middleware/: auth.rs
backend/src/models/: budget.rs  category.rs  expense.rs  mod.rs  notification.rs  user.rs
backend/src/routes/: budget.rs  category.rs  expense.rs  mod.rs  router.rs  user.rs
backend/src/schema/: budget.rs  category.rs  expense.rs  mod.rs  notification.rs  user.rs
backend/src/utils/: hash.rs  helper.rs  jwt.rs  mod.rs  pattern.rs
exptrack/: .env  .gitignore  README.md  app.json  package-lock.json  package.json
exptrack/api/: budget.ts  category.ts  expense.ts  user.ts
exptrack/app/: +not-found.tsx  _layout.tsx
exptrack/app/(tabs)/: _layout.tsx  index.tsx
exptrack/app/(tabs)/(home)/: _layout.tsx  index.tsx
exptrack/app/(tabs)/budget/: [id].tsx  _layout.tsx  create.tsx  index.tsx
exptrack/app/(tabs)/budget/update/: [id].tsx
exptrack/app/(tabs)/expenses/: _layout.tsx  create.tsx  index.tsx
exptrack/app/(tabs)/expenses/update/: [id].tsx
exptrack/app/auth/: _layout.tsx  login.tsx  register.tsx
exptrack/components/: expense-card.tsx  sign-in-form.tsx  sign-up-form.tsx  theme-toggle.tsx  user-menu.tsx
exptrack/components/budget/: budget-card.tsx  create-form.tsx  update-form.tsx
exptrack/components/expense/: create-form.tsx  update-form.tsx
exptrack/components/ui/: textarea.tsx
exptrack/schema/: budget.ts  category.ts  expense.ts  index.ts  user.ts
exptrack/store/: auth-context.tsx
exptrack/utils/: backgroundTask.ts
